# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("benchmark") {
  deps = [
    ":launch_benchmark",
    "//apps/ledger/benchmark/lib",
    "//apps/ledger/benchmark/put",
    "//apps/ledger/benchmark/sync",
  ]
}

executable("launch_benchmark") {
  sources = [
    "constants.h",
    "launch_benchmark.cc",
  ]

  deps = [
    "//application/lib/app",
    "//apps/ledger/benchmark/lib",
    "//apps/ledger/benchmark/put:lib",
    "//apps/ledger/services/internal",
    "//apps/ledger/services/public",
    "//apps/tracing/lib/trace",
    "//apps/tracing/lib/trace:provider",
    "//lib/fidl/cpp/bindings",
    "//lib/ftl",
    "//lib/mtl",
  ]
}
