# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("emulation/emulation_arm64.gni")

target_cpu = "arm64"

board_name = "qemu-arm64"

_common_bootfs_deps = [
  "//src/devices/bus/drivers/pci:bus-pci",
  "//src/devices/bus/drivers/pci:bus-pci.proxy",
  "//src/devices/usb/drivers/xhci-rewrite:xhci",
]
_common_bootfs_deps += [ "//src/security/policy/zxcrypt:null" ]

board_bootfs_labels += _common_bootfs_deps

board_zedboot_bootfs_labels += _common_bootfs_deps

board_recovery_bootfs_labels += _common_bootfs_deps

board_system_image_deps = [
  "//garnet/packages/prod:drivers-system",
  "//src/media/audio/bundles:virtual_audio_driver",
]

board_package_labels = [
  "//garnet/bin/power_manager",
  "//garnet/bin/power_manager:base_config",
  "//garnet/bin/thermd",
  "//garnet/bin/thermd:config",
  "//garnet/packages/prod:drivers-support",
]

max_fuchsia_zbi_size = "16777216"  # 16 MiB
max_zedboot_zbi_size = "16777216"  # 16 MiB
