# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("emulation/emulation_arm64.gni")

has_board = true

target_cpu = "arm64"

board_name = "qemu-arm64"
board_description = "A generic emulated arm64 device."

blobfs_capacity = 10485760000  # 10000 MiB
max_blob_contents_size =
    5216665600  # 4975 MiB. Leaves 50 MiB for the update package.

_common_bootfs_deps = [
  "//src/devices/bus/drivers/pci:bus-pci",
  "//src/devices/usb/drivers/xhci",
  "//src/power/power-manager:base_config",
]
_common_bootfs_deps += [ "//src/security/policy/zxcrypt:null" ]

board_bootfs_labels += _common_bootfs_deps

board_zedboot_bootfs_labels += _common_bootfs_deps

board_recovery_bootfs_labels += _common_bootfs_deps

board_driver_package_labels += [
  "//bundles/packages/prod:drivers-system",
  "//src/media/audio/bundles:virtual_audio_driver",
]

board_package_labels += [
  "//src/hwinfo:default_board_config",
  "//src/devices/sysmem/bin/sysmem_connector",
  "//src/graphics/bin/vulkan_loader",
]

max_fuchsia_zbi_size = 16777216  # 16 MiB
max_zedboot_zbi_size = 16777216  # 16 MiB

# Supports only virtual devices.
board_is_emu = true
board_is_phys = false

# Build a UEFI image for virtualized platforms.
build_uefi_disk = true
use_gigaboot = true
use_vbmeta = true
avb_atx_metadata =
    "//third_party/android/platform/external/avb/test/data/atx_metadata.bin"
avb_key =
    "//third_party/android/platform/external/avb/test/data/testkey_atx_psk.pem"
