# Copyright 2020 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

target_cpu = "arm64"

board_name = "as370"

board_bootfs_labels = [ "//src/security/policy/zxcrypt:null" ]

board_zedboot_bootfs_labels = [ "//src/security/policy/zxcrypt:null" ]

board_recovery_bootfs_labels = [ "//src/security/policy/zxcrypt:null" ]

board_package_labels = [
  "//garnet/bin/thermd",
  "//garnet/bin/thermd:config",
]

custom_signing_script =
    "//zircon/kernel/target/arm64/board/as370/package-as370-image.sh"

zircon_a_partition = "boot"
signed_image = true
pre_erase_flash = true
