# Copyright 2020 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

target_cpu = "arm64"

board_name = "as370"

_common_bootfs_deps = [
  "//src/devices/block/drivers/as370-sdhci",
  "//src/devices/board/drivers/as370",
  "//src/devices/clock/drivers/as370-clk",
  "//src/devices/gpio/drivers/as370-gpio",
  "//src/devices/i2c/drivers/dw-i2c",
  "//src/devices/nand/drivers/cadence-hpnfc",
  "//src/devices/power/drivers/as370-power",
  "//src/devices/thermal/drivers/as370-thermal",
  "//src/devices/usb/drivers/as370-usb-phy",
  "//src/devices/usb/drivers/dwc2",
  "//src/media/audio/drivers/as370-pdm-input",
  "//src/media/audio/drivers/as370-tdm-output",
  "//src/media/audio/drivers/codecs/max98373",
  "//src/ui/input/drivers/cypress",
  "//src/ui/light/drivers/lp50xx-light",
]

board_bootfs_labels =
    _common_bootfs_deps + [ "//src/security/policy/zxcrypt:null" ]

board_zedboot_bootfs_labels =
    _common_bootfs_deps + [ "//src/security/policy/zxcrypt:null" ]

board_recovery_bootfs_labels =
    _common_bootfs_deps + [ "//src/security/policy/zxcrypt:null" ]

board_package_labels = [
  "//garnet/bin/thermd",
  "//garnet/bin/thermd:config",
]

custom_signing_script =
    "//zircon/kernel/target/arm64/board/as370/package-as370-image.sh"

zircon_a_partition = "boot"
pre_erase_flash = true
