# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//boards/arm64.gni")

board_name = "c18"

# serial console
board_zedboot_cmdline_args = [ "kernel.bypass-debuglog=true" ]

# depthcharge bootloader packaging
custom_signing_script =
    "//zircon/kernel/target/arm64/board/c18/package-image.sh"

# required tool for packaging script
board_package_labels += [ "//tools/vboot_reference:futility_host" ]

_common_bootfs_deps = [
  "//src/devices/block/drivers/mtk-sdmmc",
  "//src/devices/board/drivers/c18",
  "//src/devices/gpio/drivers/mt-8167",
  "//src/devices/spi/drivers/mtk-spi",
]

board_bootfs_labels += _common_bootfs_deps

board_zedboot_bootfs_labels += _common_bootfs_deps

board_recovery_bootfs_labels += _common_bootfs_deps
