# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//boards/arm64.gni")

board_name = "c18"

# serial console
board_zedboot_cmdline_args = [ "kernel.bypass-debuglog=true" ]

# depthcharge bootloader packaging
custom_signing_script =
    "//zircon/kernel/target/arm64/board/c18/package-image.sh"
custom_signing_script_deps = [ "//zircon/kernel/target/arm64/boot-shim:c18" ]
custom_signing_script_tools = [
  "//zircon/tools/lz4",
  "//zircon/tools/zbi",
]

# NOTE: The signing script also depends on the "mkimage" tool being installed
# on your Ubuntu system. The latter is not provided by the Fuchsia build. To get
# it see instructions as in:
# https://github.com/google/syzkaller/blob/master/docs/linux/setup_ubuntu-host_odroid-c2-board_arm64-kernel.md

# required tool for packaging script
board_package_labels += [ "//tools/vboot_reference:futility_host" ]

_common_bootfs_deps = [
  "//src/devices/block/drivers/mtk-sdmmc",
  "//src/devices/board/drivers/c18",
  "//src/devices/gpio/drivers/mt-8167",
  "//src/devices/rtc/drivers/fallback",
  "//src/devices/spi/drivers/mtk-spi",
]

board_bootfs_labels += _common_bootfs_deps

board_zedboot_bootfs_labels += _common_bootfs_deps

board_recovery_bootfs_labels += _common_bootfs_deps
