# Copyright 2022 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("chromebook-x64.gni")

board_bootfs_labels += [ "//bundles/drivers:bootstrap-dfv2" ]
board_bootfs_labels += [ "//bundles/drivers:disable.drivers_for_dfv2" ]
