# Copyright 2022 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("chromebook-x64.gni")

board_bootfs_labels += [
  "//bundles/drivers:bootstrap-dfv2",
  "//bundles/drivers:disable.drivers_for_dfv2",
  "//src/media/audio/drivers/codecs/da7219:component-dfv2",
]

board_provided_drivers += [
  {
    package_target = "//src/ui/backlight/drivers:chromebook-keyboard-backlight"
    driver_components = [ "meta/backlight_driver.cm" ]
  },
]
