# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//boards/arm64.gni")

board_name = "eagle"

custom_signing_script =
    "//zircon/kernel/target/arm64/board/eagle/package-image.sh"

# partitions for fx flash to flash
zircon_a_partition = "boot"
zircon_r_partition = "recovery"

# The eagle image is not actually signed, but defining custom_signing_script
# means we use zedboot.zbi.signed.
signed_image = true
