# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//boards/arm64.gni")

board_name = "COR_AL00_VD"

custom_signing_script =
    "//zircon/kernel/target/arm64/board/kirin970/package-image.sh"

# partitions for fx flash to flash
zircon_a_partition = "boot"
